force-app/main/default/objects/Beer__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description retrieved from PUNK API.</description>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>