force-app/main/default/objects/Beer__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Id retrieved from Punk API.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>