force-app/main/default/objects/Beer__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <description>Tagline retrieved from PUNK API</description>
    <label>Tagline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>