force-app/main/default/objects/Beer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>External_ID__c</columns>
    <columns>NAME</columns>
    <columns>Tagline__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>